--- a/includes/all_subsets.tex
+++ b/includes/all_subsets.tex
@@ -3,23 +3,23 @@
 {\large Table 4: All Subsets Deviance R-square Results Across Models}
 } \\ 
 \toprule
-\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/MJ \\ 
+\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/OC \\ 
 \midrule
-ER & $0.1704$ & $0.1845$ \\ 
-AS & $0.1418$ & $0.1519$ \\ 
-SL & $0.1008$ & $0.1051$ \\ 
-WE & $0.1384$ & $0.1483$ \\ 
-ER + AS & $0.2209$ & $0.2455$ \\ 
-ER + SL & $0.2388$ & $0.2665$ \\ 
-ER + WE & $0.2530$ & $0.2847$ \\ 
-AS + SL & $0.2047$ & $0.2285$ \\ 
-AS + WE & $0.2200$ & $0.2454$ \\ 
-SL + WE & $0.1816$ & $0.2007$ \\ 
-ER + AS + SL & $0.2748$ & $0.3127$ \\ 
-ER + AS + WE & $0.2821$ & $0.3212$ \\ 
-ER + SL + WE & $0.2868$ & $0.3272$ \\ 
-AS + SL + WE & $0.2524$ & $0.2866$ \\ 
-ER + AS + SL + WE & $0.3113$ & $0.3584$ \\ 
+ER & $0.1524$ & $0.1655$ \\ 
+AS & $0.1131$ & $0.1204$ \\ 
+SL & $0.0744$ & $0.0749$ \\ 
+WE & $0.1219$ & $0.1323$ \\ 
+ER + AS & $0.1887$ & $0.2097$ \\ 
+ER + SL & $0.2006$ & $0.2215$ \\ 
+ER + WE & $0.2248$ & $0.2553$ \\ 
+AS + SL & $0.1584$ & $0.1734$ \\ 
+AS + WE & $0.1844$ & $0.2059$ \\ 
+SL + WE & $0.1502$ & $0.1650$ \\ 
+ER + AS + SL & $0.2266$ & $0.2552$ \\ 
+ER + AS + WE & $0.2442$ & $0.2795$ \\ 
+ER + SL + WE & $0.2459$ & $0.2806$ \\ 
+AS + SL + WE & $0.2050$ & $0.2309$ \\ 
+ER + AS + SL + WE & $0.2624$ & $0.3014$ \\ 
 \bottomrule
 \end{longtable}
 
