--- a/includes/descrips_initial.tex
+++ b/includes/descrips_initial.tex
@@ -5,14 +5,14 @@
 \toprule
  &  &  & \multicolumn{6}{c}{Correlations} \\ 
 \cmidrule(lr){4-9}
-Variable & Mean & Standard Deviation & ER & AS & SL & WE & SJ & MJ \\ 
+Variable & Mean & Standard Deviation & ER & AS & SL & WE & SJ & OC \\ 
 \midrule
-ER & $-0.0355$ & $1.1853$ & $1.0000$ & $0.4168$ & $0.1446$ & $0.2180$ & $0.4419$ & $0.3820$ \\ 
-AS & $-0.0261$ & $1.4494$ & $0.4168$ & $1.0000$ & $0.1958$ & $0.2850$ & $0.4025$ & $0.3488$ \\ 
-SL & $-0.0056$ & $1.5480$ & $0.1446$ & $0.1958$ & $1.0000$ & $0.3295$ & $0.3393$ & $0.2935$ \\ 
-WE & $0.0144$ & $1.9211$ & $0.2180$ & $0.2850$ & $0.3295$ & $1.0000$ & $0.3973$ & $0.3487$ \\ 
-SJ & $0.9920$ & $1.0040$ & $0.4419$ & $0.4025$ & $0.3393$ & $0.3973$ & $1.0000$ & $0.8773$ \\ 
-MJ & $0.9971$ & $1.7478$ & $0.3820$ & $0.3488$ & $0.2935$ & $0.3487$ & $0.8773$ & $1.0000$ \\ 
+ER & $-0.0355$ & $1.1853$ & $1.0000$ & $0.4168$ & $0.1446$ & $0.2180$ & $0.4175$ & $0.3634$ \\ 
+AS & $-0.0261$ & $1.4494$ & $0.4168$ & $1.0000$ & $0.1958$ & $0.2850$ & $0.3592$ & $0.3119$ \\ 
+SL & $-0.0056$ & $1.5480$ & $0.1446$ & $0.1958$ & $1.0000$ & $0.3295$ & $0.2913$ & $0.2489$ \\ 
+WE & $0.0144$ & $1.9211$ & $0.2180$ & $0.2850$ & $0.3295$ & $1.0000$ & $0.3726$ & $0.3307$ \\ 
+SJ & $0.9940$ & $1.0082$ & $0.4175$ & $0.3592$ & $0.2913$ & $0.3726$ & $1.0000$ & $0.8771$ \\ 
+OC & $0.9994$ & $1.7591$ & $0.3634$ & $0.3119$ & $0.2489$ & $0.3307$ & $0.8771$ & $1.0000$ \\ 
 \bottomrule
 \end{longtable}
 
