--- a/includes/gen_dom.tex
+++ b/includes/gen_dom.tex
@@ -3,13 +3,13 @@
 {\large Table 5: General Dominance Statistics}
 } \\ 
 \toprule
-\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/MJ \\ 
+\multicolumn{1}{l}{} & Poisson/SJ & Negative Binomial/OC \\ 
 \midrule
-ER & $0.1048$ & $0.1206$ \\ 
-AS & $0.0726$ & $0.0833$ \\ 
-SL & $0.0570$ & $0.0657$ \\ 
-WE & $0.0769$ & $0.0888$ \\ 
-Overall & $0.3113$ & $0.3584$ \\ 
+ER & $0.0965$ & $0.1115$ \\ 
+AS & $0.0560$ & $0.0637$ \\ 
+SL & $0.0399$ & $0.0440$ \\ 
+WE & $0.0700$ & $0.0823$ \\ 
+Overall & $0.2624$ & $0.3014$ \\ 
 \bottomrule
 \end{longtable}
 
